@@ -370,3 +370,4 @@
  26-Mar-2025  V1.801 Add support for prepending content type and directory hash for splitIdList output
  14-May-2025  V1.802 Add support for IHM repository holdings and model file loading
   1-Jul-2025  V1.803 Error handling for splitIdListAndWriteToFiles
+ 24-Jul-2025  V1.804 Switch to lower-case for CSMs
